force-app/main/default/objects/Order_Item__c/fields/Customer_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Type__c</fullName>
    <formula>TEXT(Order__r.Order_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Order Type</label>
    <type>Text</type>
</CustomField>