force-app/main/default/objects/Order_Item__c/fields/Scheme_Item__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Item</label>
    <referenceTo>Buy_Product__c</referenceTo>
    <relationshipLabel>Order Items (Scheme Item)</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>